# python-project-49

./: Makefile  README.md  demo.cast  pyproject.toml  setup.cfg
.github/workflows/: .gitignore  Makefile
brain_games/: cli.py  consts.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
