[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Demidb <LLiker1337@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain_games = "brain_games.scripts.brain_games:main"
  
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"