[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "«Игры разума» — набор из пяти консольных игр, построенных по принципу популярных мобильных приложений для прокачки мозга.
Каждая игра задает вопросы, на которые нужно дать правильные ответы. 
После трех правильных ответов считается, что игра пройдена. Неправильные ответы завершают игру и предлагают пройти ее заново. Игры:
Калькулятор. Арифметические выражения, которые необходимо вычислить
Прогрессия. Поиск пропущенных чисел в последовательности чисел
Определение четного числа
Определение наибольшего общего делителя
Определение простого числа"
authors = ["Demid Alexeev <LLiker1337@gmail.com"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"